--- a/Front-UMI/src/app/app.component.html
+++ b/Front-UMI/src/app/app.component.html
@@ -1,2 +1,2 @@
-<app-navbar style="position:fixed"></app-navbar>
+<app-navbar *ngIf="router.url.includes('app')" style="position:fixed"></app-navbar>
 <router-outlet></router-outlet>
