--- a/Front-UMI/src/app/projects/project/config/config.component.html
+++ b/Front-UMI/src/app/projects/project/config/config.component.html
@@ -1,9 +1,23 @@
+<app-custom-modal [buttons]="[
+{ text: 'Yes', value:'yes', class: 'bg-indigo-600 hover:bg-indigo-700 text-white'},
+{ text: 'No', value:'no', class: 'bg-white hover:bg-gray-50 border border-gray-300 text-gray-700'}]"
+                  [showModal]="showConfirmDelete"
+                  (modalClosed)="deleteProject($event)"
+                  title="Test"
+                  message="message">
+</app-custom-modal>
 <div class="dashboard-content">
   <header class="bg-white shadow">
     <div class="max-w-7xl mx-auto py-4 px-4 sm:px-6 lg:px-8">
-      <h1 class="text-3xl font-bold text-gray-900">Configuration</h1>
+      <h1 *ngIf="isEditing" class="text-3xl font-bold text-gray-900">Configuration</h1>
+      <h1 *ngIf="!isEditing" class="text-3xl font-bold text-gray-900">New project</h1>
       <div class="mt-2 flex items-center text-sm text-gray-500">
-        Configure your project
+        <span *ngIf="isEditing">
+          Configure your project
+        </span>
+        <span *ngIf="!isEditing">
+          Create your project
+        </span>
       </div>
     </div>
 
@@ -17,35 +31,70 @@
             <div class="overflow-hidden sm:rounded-md">
               <div class="col-span-6 sm:col-span-3 w-3">
                 <label for="project-name" class="block text-sm font-medium text-gray-700">Project name</label>
-                <input type="text" name="project-name" id="project-name" [(ngModel)]="name" autocomplete="given-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                <input type="text" name="project-name" id="project-name" [(ngModel)]="name" autocomplete="given-name"
+                       class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
               </div>
               <div class="col-span-6 sm:col-span-3 w-3 mt-3">
                 <label class="block text-sm font-medium text-gray-700">Authorized Servers</label>
                 <div *ngFor="let server of authorizedServer" class="mt-1 flex rounded-md">
-                  <span class="inline-flex items-center px-3 rounded-l-md border border-r-0 border-gray-300 bg-gray-50 text-sm">{{server.ip}}</span>
-                  <button (click)="removeServer(server)" type="button" class="bg-white py-2 px-3 border border-gray-300 rounded-r-md shadow-sm hover:bg-gray-50 focus:outline-none">
-                    <svg style="transform: scale(1.2)" xmlns="http://www.w3.org/2000/svg" class="h-5" viewBox="0 0 20 20" fill="darkred">
-                      <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd" />
+                  <span
+                    class="inline-flex items-center px-3 rounded-l-md border border-r-0 border-gray-300 bg-gray-50 text-sm">{{server.serverAddress}}</span>
+                  <button (click)="removeServer(server)" type="button"
+                          class="bg-white py-2 px-3 border border-gray-300 rounded-r-md shadow-sm hover:bg-gray-50 focus:outline-none">
+                    <svg style="transform: scale(1.2)" xmlns="http://www.w3.org/2000/svg" class="h-5"
+                         viewBox="0 0 20 20" fill="darkred">
+                      <path fill-rule="evenodd"
+                            d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z"
+                            clip-rule="evenodd"/>
                     </svg>
                   </button>
                 </div>
               </div>
               <div class="mt-1 flex rounded-md">
-                <input [(ngModel)]="ipInputField" name="addServer" type="text" class="mt-1 w-3 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-l-md">
-                <button [disabled]="ipInputField == ''" (click)="addIp()" type="button" class="inline-flex items-center mt-1 px-4 py-2 border-r-0 border-transparent rounded-r-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-                  <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M12 4v16m8-8H4" />
+                <input [(ngModel)]="ipInputField" name="addServer" type="text"
+                       class="mt-1 w-3 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-l-md">
+                <button [disabled]="ipInputField == ''" (click)="addIp()" type="button"
+                        class="inline-flex items-center mt-1 px-4 py-2 border-r-0 border-transparent rounded-r-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                  <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5" fill="none" viewBox="0 0 24 24"
+                       stroke="currentColor" stroke-width="2">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M12 4v16m8-8H4"/>
                   </svg>
                   Add
                 </button>
               </div>
-              <button (click)="save()" type="button" class="mt-4 inline-flex items-center mt-1 px-4 py-2 border-r-0 border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-                <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                  <path stroke-linecap="round" stroke-linejoin="round" d="M8 7H5a2 2 0 00-2 2v9a2 2 0 002 2h14a2 2 0 002-2V9a2 2 0 00-2-2h-3m-1 4l-3 3m0 0l-3-3m3 3V4" />
+              <button (click)="save()" type="button"
+                      class="mt-4 inline-flex items-center mt-1 px-4 py-2 border-r-0 border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5" fill="none" viewBox="0 0 24 24"
+                     stroke="currentColor" stroke-width="2">
+                  <path stroke-linecap="round" stroke-linejoin="round"
+                        d="M8 7H5a2 2 0 00-2 2v9a2 2 0 002 2h14a2 2 0 002-2V9a2 2 0 00-2-2h-3m-1 4l-3 3m0 0l-3-3m3 3V4"/>
                 </svg>
-                Save
+                <span *ngIf="isEditing">
+                  Save
+                </span>
+                <span *ngIf="!isEditing">
+                  Create
+                </span>
               </button>
+              <a routerLink="/projects"
+                 class="ml-1 inline-flex items-center px-4 py-2 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                <svg class="-ml-1 mr-2 h-5 w-5 text-gray-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                  <!--! Font Awesome Pro 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
+                  <path
+                    d="M160 416H96c-17.67 0-32-14.33-32-32V128c0-17.67 14.33-32 32-32h64c17.67 0 32-14.33 32-32S177.7 32 160 32H96C42.98 32 0 74.98 0 128v256c0 53.02 42.98 96 96 96h64c17.67 0 32-14.33 32-32S177.7 416 160 416zM502.6 233.4l-128-128c-12.51-12.51-32.76-12.49-45.25 0c-12.5 12.5-12.5 32.75 0 45.25L402.8 224H192C174.3 224 160 238.3 160 256s14.31 32 32 32h210.8l-73.38 73.38c-12.5 12.5-12.5 32.75 0 45.25s32.75 12.5 45.25 0l128-128C515.1 266.1 515.1 245.9 502.6 233.4z"/>
+                </svg>
+                Cancel
+              </a>
             </div>
+            <button *ngIf="isEditing" (click)="toggleModal()" type="button"
+                    class="ml-1 mt-4 inline-flex items-center mt-1 px-4 py-2 border-r-0 border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-red-600 hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-400">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                   stroke="currentColor" class="w-6 h-6">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                      d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0"/>
+              </svg>
+              Delete Project
+            </button>
           </form>
         </div>
 
